contact buyer & contact seller pages

--- a/contactBuyer.html
+++ b/contactBuyer.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/general.css" />
     <script defer src="js/script.js"></script>
-    <title>Contact Seller Page</title>
+    <title>Contact Buyer Page</title>
   </head>
   <body>
     <header class="header">
@@ -38,9 +38,9 @@
       </div>
     </header>
     <main>
-      <section class="section-contact-seller-header">
-        <div class="contact-seller-header-content container">
-          <h5 class="page-header">Contact Seller</h5>
+      <section class="section-contact-buyer-header">
+        <div class="contact-buyer-header-content container">
+          <h5 class="page-header">Contact Buyer</h5>
           <button class="cta-btn major-btn" href="#">
             <div class="btn-contents">
               <span>Back to property</span>
@@ -60,13 +60,13 @@
                 <div class="account-container-no-btn message-account-container">
                   <img
                     class="profile-pic"
-                    src="img/face_3.webp"
+                    src="img/face_1.webp"
                     alt="Your profile picture"
                   />
                   <div class="account-details">
-                    <span class="account-name profile-info">Michael James</span>
+                    <span class="account-name profile-info">Megan Green</span>
                     <span class="account-username profile-info"
-                      >@mjames123</span
+                      >@megGrn278</span
                     >
                   </div>
                 </div>
@@ -97,37 +97,37 @@
                   </div>
                 </div>
               </div>
-              <div class="message-seller-reply-section message-reply-false">
+              <div class="message-buyer-reply-section message-reply-true">
 
-                <div class="message-seller-original-msg-label">
+                <div class="message-buyer-original-msg-label">
                   <label class="form-label"
                   >Original Message</label
                   >
                 </div>
-                <div class="message-seller-message-field-input message-seller-original-message">
+                <div class="message-buyer-message-field-input message-buyer-original-message">
                   <textarea readonly
-                  class="message-seller-message-field form-field-description"
+                  class="message-buyer-message-field form-field-description"
                   required
                   >Here the original message is displayed.</textarea>
                 </div>
               </div>
-              <form action="" method="get" class="message-seller-form">
-                <div class="message-seller-field">
-                  <div class="message-seller-field-label">
-                    <label class="form-label" for="message-seller-message"
+              <form action="" method="get" class="message-buyer-form">
+                <div class="message-buyer-field">
+                  <div class="message-buyer-field-label">
+                    <label class="form-label" for="message-buyer-message"
                       >Message</label
                     >
                   </div>
-                  <div class="message-seller-message-field-input">
+                  <div class="message-buyer-message-field-input">
                     <textarea
-                      class="message-seller-message-field form-field-description"
-                      id="message-seller-message"
+                      class="message-buyer-message-field form-field-description"
+                      id="message-buyer-message"
                       placeholder="Write your message here"
                       required
                     ></textarea>
                   </div>
                 </div>
-                <div class="message-seller-bottom-section">
+                <div class="message-buyer-bottom-section">
                   <div class="message-type-field">
                     <label class="form-label" for="message-type"
                       >Message Type</label
@@ -140,7 +140,7 @@
                     </select>
                   </div>
                   <button
-                    class="message-seller-send-btn reply-btn options-btn"
+                    class="message-buyer-send-btn reply-btn options-btn"
                   >
                     <div class="btn-contents">
                       <span>Send</span
