--- a/ViewProperty.html
+++ b/ViewProperty.html
@@ -65,7 +65,7 @@
         <p>This stunning bungalow is for outright sale and offers 4 showers, 4 bedrooms as well as a nice pool to dip into whenever you please, styled to look natural.</p>
         
         <p>This property isn't far from the great city of [?] and offers a unique experience where you can enjoy life away from all the buzz and focus on what's important.</p> 
-        <ul>  
+        <ul class="house-features">  
         <li>Quality flooring</li>
           <li>Large contemporary kitchen</li>
         </ul>
