reworked search results
removed buttons from search and added space for an additional card on each row

--- a/propertysearch.html
+++ b/propertysearch.html
@@ -171,16 +171,7 @@
           Your Property Search Returned <span>Three</span> Results
         </p>
         <div class="carousel">
-          <button class="carousel-btn left-btn">
-            <ion-icon
-              name="chevron-back-outline"
-              class="carousel-btn-icon left-carousel-icon"
-            ></ion-icon>
-          </button>
-          <div
-            id="carousel1"
-            class="carousel-property-card card-unfocussed carousel-column-1"
-          >
+          <div id="carousel1" class="carousel-property-card card-focussed">
             <img class="carousel-property-img" src="img/house_2.png" />
             <div class="carousel-property-card-content">
               <div class="carousel-property-tags">
@@ -210,10 +201,7 @@
               </p>
             </div>
           </div>
-          <div
-            id="carousel2"
-            class="carousel-property-card card-focussed carousel-column-2"
-          >
+          <div id="carousel2" class="carousel-property-card card-focussed">
             <img class="carousel-property-img" src="img/house_3.webp" />
             <div class="carousel-property-card-content">
               <div class="carousel-property-tags">
@@ -243,10 +231,7 @@
               </p>
             </div>
           </div>
-          <div
-            id="carousel3"
-            class="carousel-property-card card-unfocussed carousel-column-3"
-          >
+          <div id="carousel3" class="carousel-property-card card-focussed">
             <img class="carousel-property-img" src="img/house_4.webp" />
             <div class="carousel-property-card-content">
               <div class="carousel-property-tags">
@@ -278,12 +263,38 @@
               </p>
             </div>
           </div>
-          <button class="carousel-btn right-btn">
-            <ion-icon
-              name="chevron-forward-outline"
-              class="carousel-btn-icon right-carousel-icon"
-            ></ion-icon>
-          </button>
+          <div id="carousel3" class="carousel-property-card card-focussed">
+            <img class="carousel-property-img" src="img/house_4.webp" />
+            <div class="carousel-property-card-content">
+              <div class="carousel-property-tags">
+                <tag class="carousel-property-tag tag-new">New</tag>
+                <tag class="carousel-property-tag tag-popular"
+                  >Popular<ion-icon name="flame-outline"></ion-icon
+                ></tag>
+              </div>
+              <p class="carousel-property-guide-price">guide price</p>
+              <p class="carousel-property-price">£1,360,000</p>
+              <div class="carousel-icon-section">
+                <tag class="icon-set"
+                  ><ion-icon name="bed-outline" class="carousel-icon"></ion-icon
+                  >4</tag
+                >
+                <tag class="icon-set"
+                  ><ion-icon
+                    name="rainy-outline"
+                    class="carousel-icon"
+                  ></ion-icon
+                  >4</tag
+                >
+              </div>
+              <p class="carousel-property-description">
+                4 bed bungalow for sale
+              </p>
+              <p class="carousel-property-address">
+                108 Mountain View Housr, Cardiff, Wales
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
