--- a/buyer.html
+++ b/buyer.html
@@ -60,8 +60,10 @@
       <section class="section-buy-main">
         <div class="buy-main-content container">
           <div class="buy-main-content-container">
-            <button class="cta-btn major-btn buyer-cta" href="#">
-              <div class="btn-contents">
+            <form style="display: inline" action="propertysearch.html" method="get">
+              <button class="cta-btn major-btn buyer-cta" href="#">
+            </form>
+            <div class="btn-contents">
                 <span>Start Searching</span>
                 <ion-icon class="cta-btn-icon" name="search-outline"></ion-icon>
               </div>
