--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
               No estate agents. No hidden fees.
             </p>
             <div class="cta-btns">
+              <form style="display: inline" action="propertysearch.html" method="get">
               <button class="cta-btn major-btn" href="#">
+              </form>
                 <div class="btn-contents">
                   <span>Start Searching</span>
                   <ion-icon
@@ -304,7 +306,9 @@
         <div class="cta-final-content container">
           <h5 class="final-heading">Join The House Trading Revolution</h5>
           <div class="cta-btns final-btns">
+            <form style="display: inline" action="propertysearch.html" method="get">
             <button class="cta-btn major-btn" href="#">
+            </form>
               <div class="btn-contents">
                 <span>Start Searching</span>
                 <ion-icon class="cta-btn-icon" name="search-outline"></ion-icon>
