Login page cleanup

--- a/contactBuyer.html
+++ b/contactBuyer.html
@@ -97,7 +97,7 @@
                   </div>
                 </div>
               </div>
-              <div class="message-buyer-reply-section message-reply-true">
+              <div class="message-buyer-reply-section message-reply-false">
 
                 <div class="message-buyer-original-msg-label">
                   <label class="form-label"
