--- a/login.html
+++ b/login.html
@@ -49,55 +49,71 @@
       </section>
       <section class="section-main-login">
         <div class="container section-main-login-content">
-          <div class="outer-login-flexbox">
-            <h3></h3>
-            <div class="design-box">
-              <div class="inner-login-flexbox">
-                <div class="login-test">
-                  <span class="material-icons material-icons-login">
-                    login
-                  </span>
-
-                  <div class="form">
-                    <input
-                      type="text"
-                      id="email"
-                      class="form_input"
-                      autocomplete="off"
-                      input
-                      placeholder="Email"
-                    />
+          <div class="create-listing-form-outer section-container">
+            <div class="create-listing-form-container login-split-form">
+              <div class="login-login-section">
+                <form action="" method="get" class="login-form">
+                  <div class="login-login-section-container">
+                    <div class="login-logo-section">
+                      <span class="material-icons material-icons-login">
+                        login
+                      </span>
+                    </div>
+                    <div class="login-fields-section">
+                      <input
+                        type="text"
+                        id="email"
+                        class="form-field"
+                        autocomplete="off"
+                        placeholder="Email"
+                        required
+                      />
+                      <input
+                        class="form-field"
+                        id="password"
+                        type="password"
+                        placeholder="Password"
+                        required
+                      />
+                    </div>
+                    <div class="login-button-section">
+                      <button class="login-submit cta-btn major-btn">
+                        Login
+                      </button>
+                    </div>
                   </div>
-                  <div class="form">
-                    <input
-                      class="form_input"
-                      type="password"
-                      placeholder="Password"
-                    />
-                  </div>
-                  <button class="login-page-buttons login-btn" type="button">
-                    Login
-                  </button>
-                  <p class="forgot-password-text">
-                    Forgotten your username or password? click forgot
-                  </p>
-                  <button class="login-page-buttons forgot-btn" type="button">
-                    Forgot
-                  </button>
-                </div>
-                <div class="signup-test">
-                  <button class="login-page-buttons" type="button">
-                    New Here
-                  </button>
-
+                </form>
+                <p class="forgot-password-text">
+                  Forgotten your username or password?
+                  <a href="forgotpw.html" class="login-forgot-link tandclink"
+                    >Click here</a
+                  >
+                </p>
+              </div>
+              <div class="login-signup-section">
+                <!-- <button class="login-page-buttons" type="button">
+                  New Here
+                </button> -->
+                <div class="login-signup-text-section">
+                  <img
+                    class="login-logo"
+                    src="img/logo.png"
+                    alt="HomeView logo"
+                  />
                   <p class="register-now-text">
                     Register now to access a platform that brings property
                     buyers and sellers together in one place. No estate agents.
                     No hidden fees.
                   </p>
-                  <button class="login-page-buttons login-btn" type="button">
-                    Register Now!
-                  </button>
+                </div>
+                <div class="login-signup-btn-section">
+                  <form
+                    style="display: inline"
+                    action="signup.html"
+                    method="get"
+                  >
+                    <button class="cta-btn major-btn">Register Now!</button>
+                  </form>
                 </div>
               </div>
             </div>
